Might actually have fixed dark mode now...

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,4 @@
+/* Set the global variables for everything. Change these to use your own fonts and colours. */
 :root {
   /* Set sans-serif & mono fonts */
   --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
@@ -14,32 +15,14 @@
   /* Line height is set to the "Golden ratio" for optimal legibility */
   --line-height: 1.618;
 
-
-  @media (prefers-color-scheme: dark) {
-  :root {
-    --bg: #212121;
-    --accent-bg: #2b2b2b;
-    --text: #dcdcdc;
-    --text-light: #ababab;
-    --border: #666;
-    --accent: #ffb300;
-    --accent-light: #ffecb3;
-    --code: #f06292;
-    --preformatted: #ccc;
-    --disabled: #111;
-  }
-
-  @media (prefers-color-scheme: light) {
-  :root {
-    --bg: #212121;
-    --accent-bg: #2b2b2b;
-    --text: #dcdcdc;
-    --text-light: #ababab;
-    --border: #666;
-    --accent: #ffb300;
-    --accent-light: #ffecb3;
-    --code: #f06292;
-    --preformatted: #ccc;
-    --disabled: #111;
-  }
+  --bg: #212121;
+  --accent-bg: #2b2b2b;
+  --text: #dcdcdc;
+  --text-light: #ababab;
+  --border: #666;
+  --accent: #ffb300;
+  --accent-light: #ffecb3;
+  --code: #f06292;
+  --preformatted: #ccc;
+  --disabled: #111;
 }
